# Pad-of-Time

./: .gitignore  CMakeLists.txt  Makefile  PadOfTime.ini  README.md
include/: config.h  log.h  proxy.h
src/: config.cpp  dllmain.cpp  hook_di.cpp  input_sdl.cpp  log.cpp
